--- a/index.html
+++ b/index.html
@@ -12,64 +12,64 @@
     <div class="site-search">
       <input class="searchbox" title="search">
     </div>
-    <nav class="nav-header">
-      <ul class="nav-header-user-list">
-        <li class="nav-header-user-item">
+    <nav class="navigation">
+      <ul class="nav-user-list">
+        <li class="nav-user-item">
           <a href="login.html" class="nav-header-item">Войти</a>
         </li>
       </ul>
-      <ul class="nav-header-goods-list">
-        <li class="nav-header-goods-list">
-          <a href="compare.html" class="nav-header-link">Сравнить</a>
+      <ul class="nav-goods-list">
+        <li class="nav-goods-list">
+          <a href="compare.html" class="nav-link">Сравнить</a>
         </li>
-        <li class="nav-header-goods-list">
-          <a href="cart.html" class="nav-header-link">Корзина</a>
+        <li class="nav-goods-list">
+          <a href="cart.html" class="nav-link">Корзина</a>
         </li>
       </ul>
-      <ul class="nav-header-site-list">
-        <li class="nav-header-site-item">
-          <a href="catalogue.html">Каталог товаров</a>
-          <ul class="nav-header-site-catalog">
-            <li>
-              <ul class="nav-header-site-catalog-first-column-list">
-                <li class="nav-header-site-catalog-first-column-item">
+      <ul class="nav-site-list">
+        <li class="nav-site-item">
+          <a href="catalog.html">Каталог товаров</a>
+          <ul class="nav-site-catalog-list">
+            <li class="nav-site-catalog-item">
+              <ul class="nav-site-catalog-video-list">
+                <li class="nav-site-catalog-video-item">
                   <a href="virtual_reality.html" class="catalog-link">Виртуальная реальность</a>
                 </li>
-                <li class="nav-header-site-catalog-first-column-item">
+                <li class="nav-site-catalog-video-item">
                   <a href="catalog.html" class="catalog-link">Моноподы для селфи</a>
                 </li>
-                <li class="nav-header-site-catalog-first-column-item">
+                <li class="nav-site-catalog-video-item">
                   <a href="action-cameras.html" class="catalog-link">Экшн-камеры</a>
                 </li>
               </ul>
             </li>
-            <li>
-              <ul class="nav-header-site-catalog-second-column-list">
-                <li class="nav-header-site-catalog-second-column-item">
+            <li class="nav-site-catalog-item">
+              <ul class="nav-site-catalog-watch-list">
+                <li class="nav-site-catalog-watch-item">
                   <a href="fitnes-bracelet.html" class="catalog-link">Фитнес-браслеты</a>
                 </li>
-                <li class="nav-header-site-catalog-second-column-item">
+                <li class="nav-site-catalog-watch-item">
                   <a href="smart-watch.html" class="catalog-link">Умные часы</a>
                 </li>
               </ul>
             </li>
-            <li>
-              <ul class="nav-header-site-catalog-third-column-list">
-                <li class="nav-header-site-catalog-third-column-item">
+            <li class="nav-site-catalog-item">
+              <ul class="nav-site-catalog-fly-list">
+                <li class="nav-site-catalog-fly-item">
                   <a href="quadrocopters.html" class="catalog-link">Квадрокоптеры</a>
                 </li>
               </ul>
             </li>
           </ul>
         </li>
-        <li class="nav-header-site-item">
-          <a href="delivery.html" class="nav-header-site-link">Доставка</a>
+        <li class="nav-site-item">
+          <a href="delivery.html" class="nav-site-link">Доставка</a>
         </li>
-        <li class="nav-header-site-item">
-          <a href="garanty.html" class="nav-header-site-link">Гарантия</a>
+        <li class="nav-site-item">
+          <a href="garanty.html" class="nav-site-link">Гарантия</a>
         </li>
-        <li class="nav-header-site-item">
-          <a href="contacts.html" class="nav-header-site-link">Контакты</a>
+        <li class="nav-site-item">
+          <a href="contacts.html" class="nav-site-link">Контакты</a>
         </li>
       </ul>
     </nav>
@@ -151,7 +151,7 @@
             <a href="virtual-reality.html" class="nav-links-link">Виртуальная реальность</a>
           </li>
           <li class="nav-links-item">
-            <a href="monopodes.html" class="nav-links-link">Моноподы для селфи</a>
+            <a href="catalog.html" class="nav-links-link">Моноподы для селфи</a>
           </li>
           <li class="nav-links-item">
             <a href="action-cameras.html" class="nav-links-link">Экшн-камеры</a>
