Внесены правки по базовой разметке

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <div class="site-search">
       <input class="searchbox" title="search">
     </div>
-    <nav class="navigation">
+    <div class="navigation-user">
       <ul class="nav-user-list">
         <li class="nav-user-item">
           <a href="login.html" class="nav-header-item">Войти</a>
         </li>
       </ul>
+    </div>
+    <div class="navigation-goods">
       <ul class="nav-goods-list">
         <li class="nav-goods-list">
           <a href="compare.html" class="nav-link">Сравнить</a>
@@ -26,39 +28,29 @@
           <a href="cart.html" class="nav-link">Корзина</a>
         </li>
       </ul>
+    </div>
+    <nav class="navigation-site">
       <ul class="nav-site-list">
         <li class="nav-site-item">
           <a href="catalog.html">Каталог товаров</a>
           <ul class="nav-site-catalog-list">
             <li class="nav-site-catalog-item">
-              <ul class="nav-site-catalog-video-list">
-                <li class="nav-site-catalog-video-item">
-                  <a href="virtual_reality.html" class="catalog-link">Виртуальная реальность</a>
-                </li>
-                <li class="nav-site-catalog-video-item">
-                  <a href="catalog.html" class="catalog-link">Моноподы для селфи</a>
-                </li>
-                <li class="nav-site-catalog-video-item">
-                  <a href="action-cameras.html" class="catalog-link">Экшн-камеры</a>
-                </li>
-              </ul>
+              <a href="virtual_reality.html" class="catalog-link">Виртуальная реальность</a>
             </li>
             <li class="nav-site-catalog-item">
-              <ul class="nav-site-catalog-watch-list">
-                <li class="nav-site-catalog-watch-item">
-                  <a href="fitnes-bracelet.html" class="catalog-link">Фитнес-браслеты</a>
-                </li>
-                <li class="nav-site-catalog-watch-item">
-                  <a href="smart-watch.html" class="catalog-link">Умные часы</a>
-                </li>
-              </ul>
+              <a href="catalog.html" class="catalog-link">Моноподы для селфи</a>
             </li>
             <li class="nav-site-catalog-item">
-              <ul class="nav-site-catalog-fly-list">
-                <li class="nav-site-catalog-fly-item">
-                  <a href="quadrocopters.html" class="catalog-link">Квадрокоптеры</a>
-                </li>
-              </ul>
+              <a href="action-cameras.html" class="catalog-link">Экшн-камеры</a>
+            </li>
+            <li class="nav-site-catalog-item">
+              <a href="fitnes-bracelet.html" class="catalog-link">Фитнес-браслеты</a>
+            </li>
+            <li class="nav-site-catalog-item">
+              <a href="smart-watch.html" class="catalog-link">Умные часы</a>
+            </li>
+            <li class="nav-site-catalog-item">
+              <a href="quadrocopters.html" class="catalog-link">Квадрокоптеры</a>
             </li>
           </ul>
         </li>
