Подключил контентные изображения в разметке.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
   <header class="header-main">
     <div class="header-logo">
-      <a href="index.html"><img src="header-logo.jpg" alt="Device"></a>
+      <a href="index.html">
+        <img src="img/logo-device-black.svg" class="header-logo-img" width="163" height="36" alt="DEVICE">
+      </a>
     </div>
     <div class="site-search">
       <input class="searchbox" title="search">
@@ -80,7 +82,7 @@
           <div class="advert">
             <h3 class="advert-header">Делай селфи, как Бен Стиллер!</h3>
             <span>01</span>
-            <img src="selfie-stick-8m.jpg" alt="Селфи палка 8 метров">
+            <img src="img/slider-1.png" height="486" width="384" alt="Селфи палка 8 метров">
             <p class="short-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
             <a href="selfie-stick.html" class="link" >Подробнее</a>
             <ul class="properties">
@@ -103,7 +105,7 @@
           <div class="advert visually-hidden">
             <h3 class="advert-header">Худеем правильно!</h3>
             <span>02</span>
-            <img src="fitness-bracelet.jpg" alt="Фитнес-браслет">
+            <img src="img/slider-2.png" height="485" width="345" alt="Фитнес-браслет">
             <p class="short-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a href="fitness-bracelet.html" class="link">Подробнее</a>
             <ul class="properties">
@@ -118,7 +120,7 @@
           <div class="advert visually-hidden">
             <h3 class="advert-header">Порхает как бабочка, жалит как пчела!</h3>
             <span>03</span>
-            <img src="selfie-stick-professional.jpg" alt="Квадрокоптер">
+            <img src="img/slider-3.png" height="334" width="526" alt="Квадрокоптер">
             <p class="short-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a href="selfie-stick.html" class="link">Подробнее</a>
             <ul class="properties">
@@ -191,16 +193,24 @@
     <section class="brands">
       <ul class="brand-list">
         <li class="brand-item">
-          <a href="dgi.html" class="brand-link"><img src="dgi-logo.jpg" alt="GDI"></a>
+          <a href="dgi.html" class="brand-link">
+            <img src="img/logo-dji.png" class="brand-img" height="100" width="260" alt="DJI">
+          </a>
         </li>
         <li class="brand-item">
-          <a href="spgadgets.html" class="brand-link"><img src="spgadgets-logo.jpg" alt="SPGadgets"></a>
+          <a href="spgadgets.html" class="brand-link">
+            <img src="img/logo-spgadgets.png" height="100" width="260"class="brand-img" alt="SPGadgets">
+          </a>
         </li>
         <li>
-          <a href="gopro.html" class="brand-link"><img src="gopro-logo.jpg" alt="GoPro"></a>
+          <a href="gopro.html" class="brand-link">
+            <img src="img/logo-gopro.png" class="brand-img" height="100" width="260" alt="GoPro">
+          </a>
         </li>
         <li class="brand-item">
-          <a href="vive.html" class="brand-link"><img src="vive-logo.jpg" alt="VIVE"></a>
+          <a href="vive.html" class="brand-link">
+            <img src="img/logo-vive.png" class="brand-img" height="100" width="260" alt="VIVE">
+          </a>
         </li>
       </ul>
     </section>
@@ -218,14 +228,20 @@
     <section class="contacts">
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <a href="map_popup.html"><img src="map.jpg" alt="Карта"></a>
+      <a href="map_popup.html">
+        <img src="img/map.jpg" height="222" width="560" alt="Карта">
+      </a>
       <a href="write_us.html" class="link">Напишите нам</a>
     </section>
   </main>
   <footer class="footer-main">
     <div class="row">
       <div class="footer-logo">
-        <a href="index.html"><img src="footer-logo.jpg" alt="Device"></a>
+        <img src="img/fb.svg">
+
+        <a href="index.html">
+          <img src="img/logo-device-yellow.svg" class="footer-logo-img" width="163" height="36" alt="DEVICE">
+        </a>
       </div>
       <div class="nav-footer">
         <ul class="nav-footer-user">
@@ -280,7 +296,7 @@
   </section>
   <section class="modal modal-map">
     <h2 class="visually-hidden">Расположение на карте</h2>
-    <!-- здесь будет карта -->
+    <img src="img/map-big.jpg" height="559" width="960" class="modal-map">
     <span class="modal-close">x</span>
   </section>
   </body>
