--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,9 @@
 <body>
 <header class="header-main">
     <div class="header-logo">
-        <a href="index.html"><img src="header-logo.jpg" alt="Device"></a>
+        <a href="index.html">
+            <img src="img/logo-device-black.svg" class="header-logo-img" width="163" height="36" alt="DEVICE">
+        </a>
     </div>
     <div class="site-search">
         <input class="searchbox" title="search">
@@ -110,6 +112,7 @@
             <div class="filters-container-price">
                 <h3 class="section-subtitle">Стоимость</h3>
                 <ul class="option-slider-select-list">
+                    <input type="range" min="0" max="5000">
                     <li class="option-slider-select-item">
                         <span>min</span>
                     </li>
@@ -164,28 +167,28 @@
         <ul class="goods-list">
             <li class="goods-item">
                 <a href="amateur-selfie-stick.html" class="goods-link">
-                    <img src="amateur-selfie-stick.jpg" class="goods-img" alt="Любительская селфи-палка">
+                    <img src="img/item-1.jpg" height="380" width="360" class="goods-img" alt="Любительская селфи-палка">
                 </a>
                 <b class="goods-info">Любительская селфи-палка</b>
                 <span class="goods-price">500 руб.</span>
             </li>
             <li class="goods-item">
                 <a href="professional-selfie-stick.html" class="goods-link">
-                    <img src="professional-selfie-stick.jpg" class="goods-img" alt="Профессиональная селфи-палка">
+                    <img src="img/item-2.jpg" height="380" width="360" class="goods-img" alt="Профессиональная селфи-палка">
                 </a>
                 <b class="goods-info">Профессиональная селфи-палка</b>
                 <span class="goods-price">1500 руб.</span>
             </li>
             <li class="goods-item">
                 <a href="nonsinkable-selfie-stick.html" class="goods-link">
-                    <img src="nonsinkable-selfie-stick.jpg" class="goods-img" alt="Непотопляемая селфи-палка">
+                    <img src="img/item-3.jpg" height="380" width="360" class="goods-img" alt="Непотопляемая селфи-палка">
                 </a>
                 <b class="goods-info">Непотопляемая селфи-палка</b>
                 <span class="goods-price">2500 руб.</span>
             </li>
             <li class="goods-item">
                 <a href="amateur-selfie-stick.html" class="goods-link">
-                    <img src="amateur-selfie-stick.jpg" class="goods-img" alt="Любительская селфи-палка">
+                    <img src="img/item-4.jpg" height="380" width="360" class="goods-img" alt="Любительская селфи-палка">
                 </a>
                 <b class="goods-info">Cелфи-палка "Следуй за мной"</b>
                 <span class="goods-price">4900 руб.</span>
@@ -216,7 +219,9 @@
 <footer class="footer-main">
     <div class="row">
         <div class="footer-logo">
-            <a href="index.html"><img src="footer-logo.jpg" alt="Device"></a>
+            <a href="index.html">
+                <img src="img/logo-device-yellow.svg" class="footer-logo-img" width="163" height="36" alt="DEVICE">
+            </a>
         </div>
         <div class="nav-footer">
             <ul class="nav-footer-user">
